<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hauk Brew Control</string>
    <string name="action_settings">Instillinger</string>
    <string name="heading">HAUK</string>
    <string name="startBrewTimeHeading">Bryggestart</string>
    <string name="heatBtn_text">Koking</string>
    <string name="meshBtn_text">Mesking</string>
    <string name="pumpBtn_text">Pumping</string>
    <string name="fermentBtn_text">Gjæring</string>
    <string name="start_date_descr">Start Dato:</string>
    <string name="start_time_descr">Start Tid:</string>
    <string name="heat_heading">Koking</string>
    <string name="heat_set_temp_descr">Set temp:</string>
    <string name="heat_actual_temp_descr">Temp koker</string>
    <string name="heat_time_descr">Koketid:</string>
    <string name="start_time_desc">Oppstartstid:</string>
    <string name="startButton_text">START</string>
    <string name="stopButton_text">STOPP</string>
    <string name="mash_heading">Mesking</string>
    <string name="mash_temp_heading">Temp(°C)</string>
    <string name="mash_time_heading">Tid(min)</string>
    <string name="degrees">°C</string>
    <string name="minutes">min</string>
    <string name="mash_step1_descr">Steg 1</string>
    <string name="mash_step2_descr">Steg 2</string>
    <string name="mash_step3_descr">Steg 3</string>
    <string name="mash_toptemp_head_text">Topp</string>
    <string name="mash_bottomtemp_head_text">Bunn</string>
    <string name="mash_chk_button_text">Temp:</string>
    <string name="mash_time_descr">Mesketid:</string>
    <string name="title_activity_brew_status">BrewStatus</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_start_brew">Start Brygging</string>
    <string name="title_activity_ferment">Gjæring</string>
    <string name="title_activity_heat">Koking</string>
    <string name="title_activity_mash">Mesking</string>
    <string name="title_activity_pump">Pumping</string>
    <string name="title_activity_set_start_brew_time">SetStartBrewTime</string>
    <string name="timePickerButtonLabel">Tid satt</string>
    <string name="temp1Label">Koking:</string>
    <string name="temp2Label">Topp røste: </string>
    <string name="temp3Label">Bunn røste:</string>
    <string name="temp4Label">Gjæring:</string>
    <string name="brew_status">Bryggestatus</string>
    <string name="refreshBtn">Oppdater</string>
    <string name="dateSetLabel">Oppstart:</string>
    <string name="setStartDatoBtn_text">Set tid</string>
    <string name="timeSetLabel">Tid satt:</string>
    <string name="currentTempLabel">Temperatur:</string>
    <string name="brewStatusCurrentProcess">Aktiv prosess</string>
    <string name="tempsLabel">Temperatur</string>
    <string name="degreesCelciusLabel">°C</string>
    <string name="mashTempBottomLabel">Temp bunn</string>
    <string name="mashTempTopLabel">Temp topp</string>
    <string name="pumpHeading">Pumping</string>
    <string name="currentFermentTime">Gjæringstid:</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Generelt</string>

    <string name="pref_title_display_name">En instilling her</string>
    <string name="pref_default_display_name">inst</string>

    <string name="pref_title_login">Innlogging</string>
    <string name="pref_default_login">admin</string>

    <string name="pref_title_password">Passord</string>
    <string name="pref_default_password">*****</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_plc_sync">PLC</string>

    <string name="pref_title_system_sync_settings">PLC instillinger</string>

</resources>
