<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_login"
        android:inputType="textCapWords"
        android:key="plc_login"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_login" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_password"
        android:inputType="textPassword"
        android:password="true"
        android:key="plc_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_password" />

</PreferenceScreen>
