<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="no.gravem.hauk.haukbrewcontrol.StartBrew"
    android:background="@drawable/beer_wallpaper">

    <TextView android:text="@string/heading" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="@android:color/black"
        android:id="@+id/MainMenu"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heatBtn_text"
        android:id="@+id/heatBtn"
        android:onClick="openHeatWindow"
        android:background="@drawable/sandrift_button"
        style="@style/btnStyleSandrift"
        android:layout_below="@+id/setStartDatoBtn"
        android:layout_toLeftOf="@+id/setStartDatoBtn"
        android:layout_toStartOf="@+id/setStartDatoBtn"
        android:layout_marginTop="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meshBtn_text"
        android:id="@+id/mashBtn"
        android:clickable="true"
        android:onClick="openMashWindow"
        android:background="@drawable/sandrift_button"
        style="@style/btnStyleSandrift"
        android:layout_below="@+id/heatBtn"
        android:layout_alignLeft="@+id/heatBtn"
        android:layout_alignStart="@+id/heatBtn"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fermentBtn_text"
        android:id="@+id/fermentingBtn"
        android:onClick="openFermentActivity"
        android:background="@drawable/sandrift_button"
        style="@style/btnStyleSandrift"
        android:layout_alignTop="@+id/mashBtn"
        android:layout_alignRight="@+id/MainMenu"
        android:layout_alignEnd="@+id/MainMenu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pumpBtn_text"
        android:id="@+id/pumpBtn"
        android:onClick="openPumpWindow"
        android:background="@drawable/sandrift_button"
        style="@style/btnStyleSandrift"
        android:layout_alignTop="@+id/heatBtn"
        android:layout_alignRight="@+id/MainMenu"
        android:layout_alignEnd="@+id/MainMenu" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setStartDatoBtn_text"
        android:id="@+id/setStartDatoBtn"
        style="@style/btnStyleSandrift"
        android:background="@drawable/sandrift_button"
        android:onClick="showDatePickerDialog"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/MainMenu"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Prosessdata"
        android:id="@+id/progressData"
        android:layout_below="@+id/mashBtn"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateSetLabel"
        android:id="@+id/dateDisplayLabel"
        android:layout_below="@+id/progressData"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="&lt;tid>"
        android:id="@+id/dateDisplay"
        android:textSize="18sp"
        android:layout_alignBottom="@+id/dateDisplayLabel"
        android:layout_alignLeft="@+id/fermentingBtn"
        android:layout_alignStart="@+id/fermentingBtn" />

</RelativeLayout>
