<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_mashContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yellow_gradientsquare">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top|center"
            android:padding="10dp"
            android:weightSum="1">


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:text="Trinn"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:transitionGroup="true"
                android:background="@drawable/grey_box">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mash_step1_descr"
                        android:id="@+id/mashLevel1Label"
                        android:textSize="24sp"
                        android:textColor="@android:color/black"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel1Temperature"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="bottom|center_horizontal"
                        android:paddingTop="10dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degreesCelciusLabel"
                        android:paddingRight="20dp"/>

                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel1Time"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:transitionGroup="true"
                android:background="@drawable/grey_box">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mash_step2_descr"
                        android:id="@+id/mashLevel2Label"
                        android:textSize="24sp"
                        android:textColor="@android:color/black"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>
                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel2Temperature"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degreesCelciusLabel"
                        android:paddingRight="20dp"/>

                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel2Time"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes"/>
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:transitionGroup="true"
                android:background="@drawable/grey_box">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mash_step3_descr"
                        android:id="@+id/mashLevel3Label"
                        android:textSize="24sp"
                        android:textColor="@android:color/black"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>

                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel3Temperature"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="center" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/degreesCelciusLabel"
                        android:paddingRight="20dp"/>

                    <EditText
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:ems="4"
                        android:id="@+id/mashLevel3Time"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:gravity="center"
                        android:paddingTop="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minutes"/>
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:paddingTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/startButton_text"
                    android:id="@+id/mashStartBtn"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="47dp"
                    android:layout_marginStart="47dp"
                    android:textSize="24sp"
                    android:background="@drawable/sandrift_button"
                    style="@style/btnStyleSandrift"
                    android:onClick="startMash" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stopButton_text"
                    android:id="@+id/mashStopBtn"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="69dp"
                    android:layout_marginEnd="69dp"
                    android:textSize="24sp"
                    android:background="@drawable/sandrift_button"
                    style="@style/btnStyleSandrift"
                    android:onClick="stopMash" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.12"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:transitionGroup="true"
                android:background="@drawable/grey_gradientsquare">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleSmall"
                    android:id="@+id/mashProcessDataProgressBar"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mashTempTopLabel"
                    android:id="@+id/mashTempTopLabel"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:longClickable="false"
                    android:layout_marginTop="40dp"
                    android:textSize="24sp"
                    android:paddingTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/mashTempTop"
                    android:textSize="18sp"
                    android:text="NA"
                    android:paddingTop="5dp"
                    android:layout_above="@+id/mashTempBottomLabel"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mashTempBottomLabel"
                    android:id="@+id/mashTempBottomLabel"
                    android:layout_below="@+id/mashTempTopLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:textSize="24dp"
                    android:paddingTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="NA"
                    android:id="@+id/mashTempBottom"
                    android:textSize="18sp"
                    android:layout_alignBottom="@+id/mashTempBottomLabel"
                    android:layout_alignLeft="@+id/mashTempTop"
                    android:layout_alignStart="@+id/mashTempTop"
                    android:paddingTop="5dp"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mash_time_descr"
                    android:id="@+id/mashTimeLabel"
                    android:textSize="24sp"
                    android:layout_below="@+id/mashTempBottomLabel"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:paddingTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/mashTime"
                    android:textSize="18sp"
                    android:layout_alignBottom="@+id/mashTimeLabel"
                    android:layout_alignLeft="@+id/mashTempTop"
                    android:layout_alignStart="@+id/mashTempTop"
                    android:text="NA"
                    android:paddingLeft="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Prosessdata"
                    android:id="@+id/textView"
                    android:textSize="24sp"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
